CSS/style.css
/* ... */
#share-buttons-top {
  display: flex;
  width: 50%;
  margin: 20px auto;
  justify-content: left;
}

.share-button-pos {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  height: 30px;
  width: 30px;
}

.share-button-background {
  background-color: #eee;
  border: 1px #eee solid;
  border-radius: 50%;
  color: black;
}

.share-button-background:hover {
  background-color: white;
}

.header-figure {
  max-width: 945px;
  margin: 25px auto 43px auto;
}

#img-alan-guth {
  width: 100%;
  height: auto;
}

#article-author {
  margin: 0 auto 20px auto;
  width: 50%;
  text-align: left;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 700;
  color: #333;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

#author-link {
  text-decoration: underline;
  text-decoration-color: #ccc;
}

#article-date {
  margin: 0 auto 30px auto;
  width: 50%;
  text-align: left;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 500;
  color: #333;
  font-size: 0.8125rem;
  line-height: 1rem;
}

/* Signup Message */
#signup-message {
  width: 47%;
  border-top: 1px rgb(204, 204, 204) solid;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto;
}

#signup-text {
  max-width: 500px;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  font-size: 1.25rem;
}

#signup-text-em {
  font-size: 0.875rem;
  font-weight: 700;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-style: normal;
  text-transform: uppercase;
}

.signup-button {
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-style: normal;
  font-weight: 700;
  height: 32px;
  text-align: center;
  width: 80px;
  margin: auto;
  white-space: nowrap;
}

.signup-button:hover {
  cursor: pointer;
  color: rgb(255, 255, 255);
  background-color: rgb(0, 0, 0);
  border: 1px solid rgb(0, 0, 0);
  border-radius: 2px;
}

/* Main Article */
.text-section {
  max-width: 50%;
  margin-left: auto;
  margin-right: auto;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  font-size: 20px;
  line-height: 30px;
  vertical-align: baseline;
  letter-spacing: normal;
  word-spacing: 0;
}

.article-subtitle {
  font-family: nyt-imperial, georgia, "times new roman", times, serif;
  font-size: 20px;
  line-height: 30px;
  vertical-align: baseline;
  letter-spacing: normal;
  word-spacing: 0;
  font-weight: 700;
}

.article-figure {
  width: 100%;
  height: auto;
  margin-left: auto;
}

.article-video {
  width: 100%;
  height: 380px;
}

#theory-of-inflation {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

#theory-grid {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.theory-grid-row {
  display: flex;
  justify-content: space-between;
}

.theory-grid-item {
  display: flex;
  flex-direction: column;
  flex: initial;
  width: 173px;
  font-family: nyt-franklin, arial, helvetica, sans-serif;
  font-size: 14px;
  line-height: 17px;
  font-weight: 300;
}

.grid-em {
  font-size: 11px;
  font-weight: bold;
  letter-spacing: 0.05em;
  line-height: 17px;
  font-family: nyt-franklin, arial, helvetica, sans-serif;
}

.grid-img {
  display: block;
  width: 200px;
  height: 120px;
}

.main-aside {
  position: relative;
  top: 850px;
  right: 50px;
  float: right;
  display: flex;
  flex-direction: column;
  width: 240px;
}

.main-aside-title {
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-size: 14px;
  line-height: 14px;
  vertical-align: baseline;
  letter-spacing: 0.28px;
  font-weight: 700;
  padding-bottom: 15px;
  border-bottom: 1px #e2e2e2 solid;
}

.main-aside-pick {
  display: flex;
  margin-bottom: 15px;
}

.main-aside-pick:hover {
  cursor: pointer;
  text-decoration: underline;
}

.aside-pick-image {
  width: 75px;
  height: 75px;
}

.aside-pick-text {
  margin: 15px 5px 5px 15px;
  font-family: nyt-cheltenham-small, georgia, "times new roman", serif;
  font-size: 14px;
  line-height: 17px;
  vertical-align: baseline;
  font-weight: 500;
  color: #333;
}

/* Thanks/Subscribe message */
#thanks-message {
  text-align: center;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-weight: 700;
  font-size: 15px;
  line-height: 19px;
}

#hr-bot {
  border-bottom: 1px rgb(204, 204, 204) solid;
  width: 78px;
  margin: 0 auto 18px;
}

#hr-top {
  border-top: 1px rgb(204, 204, 204) solid;
  width: 78px;
  margin: 18px auto 0;
}

#suscribe {
  color: rgb(50, 104, 145);
}

/* Article footer */
.article-footer {
  width: 50%;
  margin: 20px auto;
}

.article-version {
  width: 90%;
  margin-left: 0;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  color: rgb(102, 102, 102);
}

#bottom-share-bar {
  display: flex;
  justify-content: space-between;
}

#share-buttons-bot {
  display: flex;
  width: 40%;
  justify-content: right;
}

#read-button {
  width: 40%;
  text-align: center;
  white-space: nowrap;
  margin: 0;
}

/* Suggestions section */
#suggestions-section {
  width: 90%;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
}

#left-entries {
  width: 70%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.left-entries-section {
  border-top: 1px black solid;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  font-size: 16px;
  line-height: 22px;
  vertical-align: baseline;
  font-weight: 700;
  width: 100%;
  margin-bottom: 15px;
}

.left-entries-row {
  display: flex;
  justify-content: space-between;
}

.blank-entry {
  width: 30%;
}

.left-entry {
  width: 30%;
  height: 290px;
  margin: 0;
  font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
  font-size: 18px;
  line-height: 22px;
  vertical-align: baseline;
  font-weight: 500;
}

.left-entry:hover {
  cursor: pointer;
  color: rgb(102, 102, 102);
}

.left-entry-figure {
  width: 100%;
  margin: 0;
}

.left-img {
  width: 100%;
  height: auto;
}
/* ... */

